--- a/style/main.css
+++ b/style/main.css
@@ -16,3 +16,8 @@ p {
     text-transform:uppercase;
     letter-spacing:10px
   }
+@media only screen and (min-width:400px) {
+    p {
+        padding-left: 12%;
+    }
+}
