--- a/style/main.css
+++ b/style/main.css
@@ -14,10 +14,9 @@ p {
     height:100px;
     margin-top:40vh;
     text-transform:uppercase;
-    letter-spacing:10px
+    letter-spacing:10px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
-@media only screen and (min-width:400px) {
-    p {
-        padding-left: 12%;
-    }
-}
+  
