--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Rubik', sans-serif;
    }
 
-p {
+.matrix-ad {
     font-size:40px;
     display:block;
     overflow-wrap: break-word;
@@ -21,8 +21,34 @@ p {
     transform: translate(-50%, -50%);
   }
 
+.footer { 
+    position: relative;
+    margin-top:20vh;
+    width: 100%;
+    border-top: 1px solid #272727;
+}
+
+.footer_nav {
+    margin-left: auto;
+    margin-right: auto;
+    max-width:1170px;
+    width:90%;
+}
+
 @media only screen and (max-width:490px){
-    p{
+    .matrix-ad{
         font-size: 8vw;
     }
+
+    .footer {
+        font-size:6vw;
+    }
+}
+
+.footer_slogan {
+    color: #9b9b9b;
+    font-size:12px;
+    line-height:12px;
+    margin: 0 0 35px;
+    width: 140px;
 }
