--- a/style/main.css
+++ b/style/main.css
@@ -52,3 +52,22 @@ body {
     margin: 0 0 35px;
     width: 140px;
 }
+
+.footer_legal {
+    clear: both;
+    color: #9b9b9b;
+    display: block;
+    float: left;
+    font-size: 12px;
+    line-height: 25px;
+    width: 100%;
+    font-size:12px;
+}
+
+@media screen and(min-width:1040px){
+    .footer-legal {
+        border-top:0;
+        margin-top:0;
+        padding-top:35px;
+    }
+}
