--- a/style/main.css
+++ b/style/main.css
@@ -60,14 +60,56 @@ body {
     float: left;
     font-size: 12px;
     line-height: 25px;
+    margin-top:45px;
+    padding-top:43px;
     width: 100%;
     font-size:12px;
 }
 
+.footer_col-title {
+    color: #fff;
+    margin-bottom:4px;
+    margin-top:35px;
+}
+
+.footer_col {
+    float:left;
+    width:50%;
+}
+
+.footer_link {
+    color: #9b9b9b;
+    display:block;
+    font-size: 12px;
+}
+
+.footer a {
+    text-decoration: none;
+    background-color: transparent;
+}
+@media screen and (min-width:480px){
+    .footer_col {
+        width:33.33%;
+    }
+}
+@media screen and (min-width:1024px){
+    .footer_col {
+        margin-right: 2.5641%;
+        width: 14.52991%;
+    }
+}
+
 @media screen and(min-width:1040px){
-    .footer-legal {
+    .footer_legal {
         border-top:0;
         margin-top:0;
         padding-top:35px;
+    }
+}
+
+@media (max-width:1300px) and (min-width:1024px){
+    .footer_col:nth-child(2) {
+        margin-right: 5%;
+        width:9.5%;
     }
 }
