--- a/style/main.css
+++ b/style/main.css
@@ -343,7 +343,7 @@ nav ul li a {
         padding-top: 90px;
     }
 
-    .contact-container {
+    .content-container {
         max-width:40%;
     }
 }
@@ -357,7 +357,7 @@ nav ul li a {
 }
 
 @media (min-width:600px) and (max-width:1023px){
-    .contact-container {
+    .content-container {
         max-width: 60%;
     }
 }
@@ -370,12 +370,12 @@ nav ul li a {
 }
 
 @media (max-width: 350px){
-    .contact-container p {
+    .content-container p {
         overflow-wrap: break-word;
     }
 }
 
-.contact-container {
+.content-container {
  padding-left:10px;
  margin-top:40vh;
 }
