Added list of deliverables
UX, UI Design, Dev, Support

--- a/style/main.css
+++ b/style/main.css
@@ -392,3 +392,19 @@ nav ul li a {
     line-height:20px;
 }
 
+/* Services Page */
+.body-text li {
+ list-style-type: none;
+ color: #fff;
+ border-bottom: 1px solid #fff; 
+ margin-right: 10px;
+ padding-bottom: 10px;
+ text-transform: uppercase;
+ padding-top: 10px;
+ letter-spacing: .05rem;
+}
+
+.body-text .header {
+    font-weight: 600;
+    font-size: 18px;
+}
