--- a/style/main.css
+++ b/style/main.css
@@ -544,3 +544,27 @@ div.lead {
     padding-left: 10px; 
     padding-right: 10px;
 }
+
+.contact-icon {
+    transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
+    -webkit-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
+    -moz-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
+    -o-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
+    opacity: 1;
+    position: fixed;
+    border-radius: 50%;
+    bottom: 15px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    background-color: #337ab7;
+    z-index: 9556;
+    -webkit-box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.contact-icon a {
+    line-height: 1em;
+    z-index: 10;
+}
