--- a/style/form.css
+++ b/style/form.css
@@ -6,27 +6,8 @@
 [ FONT ]*/
 
 @font-face {
-  font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  font-family: Rubik;
 }
-
-@font-face {
-  font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
-}
-
-@font-face {
-  font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
-}
-
-@font-face {
-  font-family: Poppins-SemiBold;
-  src: url('../fonts/poppins/Poppins-SemiBold.ttf'); 
-}
-
-
-
 
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
@@ -39,12 +20,11 @@
 
 body, html {
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	font-family: Rubik, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -69,7 +49,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -183,7 +162,6 @@ iframe {
 
 .contact100-form-title {
   display: block;
-  font-family: Poppins-Bold;
   font-size: 39px;
   color: #333333;
   line-height: 1.2;
@@ -205,7 +183,6 @@ iframe {
 }
 
 .label-input100 {
-  font-family: Poppins-Regular;
   font-size: 13px;
   color: #666666;
   line-height: 1.5;
@@ -216,7 +193,6 @@ iframe {
   display: block;
   width: 100%;
   background: transparent;
-  font-family: Poppins-Medium;
   font-size: 18px;
   color: #333333;
   line-height: 1.2;
@@ -327,7 +303,6 @@ textarea.input100 {
   width: 100%;
   height: 50px;
 
-  font-family: Poppins-Medium;
   font-size: 16px;
   color: #fff;
   line-height: 1.2;
@@ -387,7 +362,6 @@ textarea.input100 {
   right: 2px;
   pointer-events: none;
 
-  font-family: Poppins-Regular;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
@@ -458,7 +432,7 @@ textarea.input100 {
 /*------------------------------------------------------------------
 [ in select ]*/
 .select2-container .select2-selection--single .select2-selection__rendered {
-  font-family: Poppins-Medium;
+
   font-size: 18px;
   color: #333333;
   line-height: 1.2;
@@ -546,7 +520,6 @@ textarea.input100 {
 }
 
 .select2-results__options {
-  font-family: Poppins-Regular;
   font-size: 15px;
   color: #333333;
   line-height: 1.2;
@@ -555,7 +528,6 @@ textarea.input100 {
 .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
   outline: none;
-  font-family: Poppins-Regular;
   font-size: 15px;
   color: #333333;
   line-height: 1.2;
