--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,6 @@
 body {
     margin:0;
     padding:0;
-    background:black;
     color:white;
     font-family: 'Rubik', sans-serif;
    }
@@ -102,8 +101,6 @@ nav ul li a:hover {
         width: 100%;
         height: 100%;
         z-index: -1;
-        /* background: linear-gradient(0deg, rgba(0, 0, 200, 0.6) , rgba(0, 0, 200, 0) ); */
-        /* background: linear-gradient(120deg, rgba(50, 150, 100, 1) , rgba(0, 0, 100, 1) ); */
         background: #000;
         opacity: 0;
         transition: all 0.2s ease;
@@ -567,4 +564,31 @@ div.lead {
 .contact-icon a {
     line-height: 1em;
     z-index: 10;
+}
+
+.wave {
+    position:relative;
+}
+
+.wave:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: url('../img/wave.png');
+    height: 215px;
+    background-size: cover;
+    background-repeat: no-repeat;  
+}
+
+.wave {
+    background: black;
+    margin: 0;
+    width: 100%;
+    min-height: 700px;
+}
+
+.footer {
+    background:#000;
 }
