--- a/style/main.css
+++ b/style/main.css
@@ -395,6 +395,7 @@ nav ul li a:hover {
     padding-left:10px;
     padding-right:10px;   
     line-height:20px;
+    color: #9b9b9b;
 }
 
 /* Services Page */
@@ -549,6 +550,7 @@ div.lead {
 .scenrio p,
 .feature-paragraph {
     font-size: 16px;
+    color: #9b9b9b;
     text-align: justify;
     padding-left: 10px; 
     padding-right: 10px;
