--- a/style/main.css
+++ b/style/main.css
@@ -550,7 +550,7 @@ div.lead {
 .scenrio p,
 .feature-paragraph {
     font-size: 16px;
-    color: #9b9b9b;
+    color: #fff;
     text-align: justify;
     padding-left: 10px; 
     padding-right: 10px;
